// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopCountriesRealtime when data is loaded and a country with name "" exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <figure
      id="chart_us"
    >
      <div
        class="data bar-chart"
      >
        <div
          class="bin"
        >
          <div
            class="label"
          >
            International
          </div>
          <div
            class="value"
          >
            100%
          </div>
          <div
            class="bar"
            style="width: 100%;"
          />
          <figure
            class=""
            id="chart_countries"
          >
            <h4>
              International
            </h4>
            <div
              class="data bar-chart"
            >
              <div
                class="bin"
                data-share="8.973291676052614"
              >
                <div
                  class="label"
                >
                  Unknown
                </div>
                <div
                  class="value"
                >
                  9%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="9.323918004368139"
              >
                <div
                  class="label"
                >
                  Slovakia
                </div>
                <div
                  class="value"
                >
                  9.3%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.53374533559249"
              >
                <div
                  class="label"
                >
                  Guadeloupe
                </div>
                <div
                  class="value"
                >
                  1.5%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.367070507232892"
              >
                <div
                  class="label"
                >
                  Portugal
                </div>
                <div
                  class="value"
                >
                  7.4%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.101711017306053"
              >
                <div
                  class="label"
                >
                  Sao Tome and Principe
                </div>
                <div
                  class="value"
                >
                  5.1%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.112425687785863"
              >
                <div
                  class="label"
                >
                  Sudan
                </div>
                <div
                  class="value"
                >
                  7.1%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.335758988472424"
              >
                <div
                  class="label"
                >
                  Montenegro
                </div>
                <div
                  class="value"
                >
                  6.3%
                </div>
                <div
                  class="bar"
                  style="width: 6%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.595359587867154"
              >
                <div
                  class="label"
                >
                  Jersey
                </div>
                <div
                  class="value"
                >
                  4.6%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="0.652282499045082"
              >
                <div
                  class="label"
                >
                  Martinique
                </div>
                <div
                  class="value"
                >
                  0.7%
                </div>
                <div
                  class="bar"
                  style="width: 1%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.117381467733563"
              >
                <div
                  class="label"
                >
                  Eritrea
                </div>
                <div
                  class="value"
                >
                  5.1%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.262333134188026"
              >
                <div
                  class="label"
                >
                  Bahrain
                </div>
                <div
                  class="value"
                >
                  5.3%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.9970030263557388"
              >
                <div
                  class="label"
                >
                  Central African Republic
                </div>
                <div
                  class="value"
                >
                  2%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.460201952929885"
              >
                <div
                  class="label"
                >
                  Sweden
                </div>
                <div
                  class="value"
                >
                  4.5%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.9411770467077365"
              >
                <div
                  class="label"
                >
                  Comoros
                </div>
                <div
                  class="value"
                >
                  1.9%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.5492688755472415"
              >
                <div
                  class="label"
                >
                  French Polynesia
                </div>
                <div
                  class="value"
                >
                  6.5%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
    <figure
      class="hide"
      id="chart_us_and_territories"
    >
      <h4>
        United States & Territories
      </h4>
      <div
        class="data bar-chart"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is loaded and a country with name null exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <figure
      id="chart_us"
    >
      <div
        class="data bar-chart"
      >
        <div
          class="bin"
        >
          <div
            class="label"
          >
            International
          </div>
          <div
            class="value"
          >
            100%
          </div>
          <div
            class="bar"
            style="width: 100%;"
          />
          <figure
            class=""
            id="chart_countries"
          >
            <h4>
              International
            </h4>
            <div
              class="data bar-chart"
            >
              <div
                class="bin"
                data-share="7.1848730026368575"
              >
                <div
                  class="label"
                >
                  Unknown
                </div>
                <div
                  class="value"
                >
                  7.2%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.4451781569042845"
              >
                <div
                  class="label"
                >
                  Democratic Republic of the Congo
                </div>
                <div
                  class="value"
                >
                  7.4%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.4209731581438325"
              >
                <div
                  class="label"
                >
                  Mauritania
                </div>
                <div
                  class="value"
                >
                  1.4%
                </div>
                <div
                  class="bar"
                  style="width: 1%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.18421942259584"
              >
                <div
                  class="label"
                >
                  Guinea-Bissau
                </div>
                <div
                  class="value"
                >
                  6.2%
                </div>
                <div
                  class="bar"
                  style="width: 6%;"
                />
              </div>
              <div
                class="bin"
                data-share="0.8913479524914922"
              >
                <div
                  class="label"
                >
                  Angola
                </div>
                <div
                  class="value"
                >
                  0.9%
                </div>
                <div
                  class="bar"
                  style="width: 1%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.988618692389173"
              >
                <div
                  class="label"
                >
                  Russian Federation
                </div>
                <div
                  class="value"
                >
                  5%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.919406819769669"
              >
                <div
                  class="label"
                >
                  Grenada
                </div>
                <div
                  class="value"
                >
                  5.9%
                </div>
                <div
                  class="bar"
                  style="width: 6%;"
                />
              </div>
              <div
                class="bin"
                data-share="2.9681548759324787"
              >
                <div
                  class="label"
                >
                  Azerbaijan
                </div>
                <div
                  class="value"
                >
                  3%
                </div>
                <div
                  class="bar"
                  style="width: 3%;"
                />
              </div>
              <div
                class="bin"
                data-share="9.323657343760566"
              >
                <div
                  class="label"
                >
                  Monaco
                </div>
                <div
                  class="value"
                >
                  9.3%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="10.14626670573122"
              >
                <div
                  class="label"
                >
                  Brunei Darussalam
                </div>
                <div
                  class="value"
                >
                  10.1%
                </div>
                <div
                  class="bar"
                  style="width: 10%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.0642987536904736"
              >
                <div
                  class="label"
                >
                  French Southern Territories
                </div>
                <div
                  class="value"
                >
                  7.1%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="0.13973090532104301"
              >
                <div
                  class="label"
                >
                  Afghanistan
                </div>
                <div
                  class="value"
                >
                  0.1%
                </div>
                <div
                  class="bar"
                  style="width: 0%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.566045390006987"
              >
                <div
                  class="label"
                >
                  Iceland
                </div>
                <div
                  class="value"
                >
                  4.6%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="2.5816411620202384"
              >
                <div
                  class="label"
                >
                  Germany
                </div>
                <div
                  class="value"
                >
                  2.6%
                </div>
                <div
                  class="bar"
                  style="width: 3%;"
                />
              </div>
              <div
                class="bin"
                data-share="2.011448919339208"
              >
                <div
                  class="label"
                >
                  Eritrea
                </div>
                <div
                  class="value"
                >
                  2%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
    <figure
      class="hide"
      id="chart_us_and_territories"
    >
      <h4>
        United States & Territories
      </h4>
      <div
        class="data bar-chart"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is loaded and a country with name undefined exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <figure
      id="chart_us"
    >
      <div
        class="data bar-chart"
      >
        <div
          class="bin"
        >
          <div
            class="label"
          >
            International
          </div>
          <div
            class="value"
          >
            88.7%
          </div>
          <div
            class="bar"
            style="width: 89%;"
          />
          <figure
            class=""
            id="chart_countries"
          >
            <h4>
              International
            </h4>
            <div
              class="data bar-chart"
            >
              <div
                class="bin"
                data-share="3.5205769349304514"
              >
                <div
                  class="label"
                >
                  Unknown
                </div>
                <div
                  class="value"
                >
                  3.5%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="2.0114647325923034"
              >
                <div
                  class="label"
                >
                  Poland
                </div>
                <div
                  class="value"
                >
                  2%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.6539623184237022"
              >
                <div
                  class="label"
                >
                  Mongolia
                </div>
                <div
                  class="value"
                >
                  1.7%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="9.354646504078405"
              >
                <div
                  class="label"
                >
                  Zimbabwe
                </div>
                <div
                  class="value"
                >
                  9.4%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.538369871175854"
              >
                <div
                  class="label"
                >
                  Lesotho
                </div>
                <div
                  class="value"
                >
                  7.5%
                </div>
                <div
                  class="bar"
                  style="width: 8%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.572702430605494"
              >
                <div
                  class="label"
                >
                  Norway
                </div>
                <div
                  class="value"
                >
                  6.6%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.729448747714245"
              >
                <div
                  class="label"
                >
                  Jordan
                </div>
                <div
                  class="value"
                >
                  7.7%
                </div>
                <div
                  class="bar"
                  style="width: 8%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.919931786895687"
              >
                <div
                  class="label"
                >
                  Sierra Leone
                </div>
                <div
                  class="value"
                >
                  6.9%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.399519220891291"
              >
                <div
                  class="label"
                >
                  Grenada
                </div>
                <div
                  class="value"
                >
                  5.4%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.74263935403012"
              >
                <div
                  class="label"
                >
                  India
                </div>
                <div
                  class="value"
                >
                  5.7%
                </div>
                <div
                  class="bar"
                  style="width: 6%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.113332374514598"
              >
                <div
                  class="label"
                >
                  Chad
                </div>
                <div
                  class="value"
                >
                  4.1%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="0.6061104148260771"
              >
                <div
                  class="label"
                >
                  Malawi
                </div>
                <div
                  class="value"
                >
                  0.6%
                </div>
                <div
                  class="bar"
                  style="width: 1%;"
                />
              </div>
              <div
                class="bin"
                data-share="9.221096751659099"
              >
                <div
                  class="label"
                >
                  Malawi
                </div>
                <div
                  class="value"
                >
                  9.2%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.903063425859341"
              >
                <div
                  class="label"
                >
                  Kenya
                </div>
                <div
                  class="value"
                >
                  7.9%
                </div>
                <div
                  class="bar"
                  style="width: 8%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.5111668139138297"
              >
                <div
                  class="label"
                >
                  Malaysia
                </div>
                <div
                  class="value"
                >
                  1.5%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
            </div>
          </figure>
        </div>
        <div
          class="bin"
        >
          <div
            class="label"
          >
            United States & Territories
          </div>
          <div
            class="value"
          >
            11.3%
          </div>
          <div
            class="bar"
            style="width: 11%;"
          />
          <figure
            class=""
            id="chart_us_and_territories"
          >
            <h4>
              United States & Territories
            </h4>
            <div
              class="data bar-chart"
            >
              <div
                class="bin"
                data-share="10.180600357502415"
              >
                <div
                  class="label"
                >
                  American Samoa
                </div>
                <div
                  class="value"
                >
                  10.2%
                </div>
                <div
                  class="bar"
                  style="width: 10%;"
                />
              </div>
              <div
                class="bin"
                data-share="1.0766164656571675"
              >
                <div
                  class="label"
                >
                  Puerto Rico
                </div>
                <div
                  class="value"
                >
                  1.1%
                </div>
                <div
                  class="bar"
                  style="width: 1%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is loaded and all country names are valid renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <figure
      id="chart_us"
    >
      <div
        class="data bar-chart"
      >
        <div
          class="bin"
        >
          <div
            class="label"
          >
            International
          </div>
          <div
            class="value"
          >
            93.5%
          </div>
          <div
            class="bar"
            style="width: 94%;"
          />
          <figure
            class=""
            id="chart_countries"
          >
            <h4>
              International
            </h4>
            <div
              class="data bar-chart"
            >
              <div
                class="bin"
                data-share="4.174865460752471"
              >
                <div
                  class="label"
                >
                  Isle of Man
                </div>
                <div
                  class="value"
                >
                  4.2%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.377278869633248"
              >
                <div
                  class="label"
                >
                  Chile
                </div>
                <div
                  class="value"
                >
                  6.4%
                </div>
                <div
                  class="bar"
                  style="width: 6%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.73644531898248"
              >
                <div
                  class="label"
                >
                  Cameroon
                </div>
                <div
                  class="value"
                >
                  6.7%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="3.925938218629241"
              >
                <div
                  class="label"
                >
                  Marshall Islands
                </div>
                <div
                  class="value"
                >
                  3.9%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="7.768900689884071"
              >
                <div
                  class="label"
                >
                  Slovenia
                </div>
                <div
                  class="value"
                >
                  7.8%
                </div>
                <div
                  class="bar"
                  style="width: 8%;"
                />
              </div>
              <div
                class="bin"
                data-share="8.047462127498163"
              >
                <div
                  class="label"
                >
                  Finland
                </div>
                <div
                  class="value"
                >
                  8%
                </div>
                <div
                  class="bar"
                  style="width: 8%;"
                />
              </div>
              <div
                class="bin"
                data-share="0.38880064484009386"
              >
                <div
                  class="label"
                >
                  Libyan Arab Jamahiriya
                </div>
                <div
                  class="value"
                >
                  0.4%
                </div>
                <div
                  class="bar"
                  style="width: 0%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.295772978355183"
              >
                <div
                  class="label"
                >
                  Burundi
                </div>
                <div
                  class="value"
                >
                  4.3%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="8.840473198833598"
              >
                <div
                  class="label"
                >
                  New Zealand
                </div>
                <div
                  class="value"
                >
                  8.8%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="10.50710035323961"
              >
                <div
                  class="label"
                >
                  Cuba
                </div>
                <div
                  class="value"
                >
                  10.5%
                </div>
                <div
                  class="bar"
                  style="width: 11%;"
                />
              </div>
              <div
                class="bin"
                data-share="2.036461914131955"
              >
                <div
                  class="label"
                >
                  Burundi
                </div>
                <div
                  class="value"
                >
                  2%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="8.976790498091558"
              >
                <div
                  class="label"
                >
                  Bahamas
                </div>
                <div
                  class="value"
                >
                  9%
                </div>
                <div
                  class="bar"
                  style="width: 9%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.305255920912259"
              >
                <div
                  class="label"
                >
                  Jersey
                </div>
                <div
                  class="value"
                >
                  4.3%
                </div>
                <div
                  class="bar"
                  style="width: 4%;"
                />
              </div>
              <div
                class="bin"
                data-share="6.687845238377468"
              >
                <div
                  class="label"
                >
                  Costa Rica
                </div>
                <div
                  class="value"
                >
                  6.7%
                </div>
                <div
                  class="bar"
                  style="width: 7%;"
                />
              </div>
              <div
                class="bin"
                data-share="5.290296579028472"
              >
                <div
                  class="label"
                >
                  Bahamas
                </div>
                <div
                  class="value"
                >
                  5.3%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
            </div>
          </figure>
        </div>
        <div
          class="bin"
        >
          <div
            class="label"
          >
            United States & Territories
          </div>
          <div
            class="value"
          >
            6.5%
          </div>
          <div
            class="bar"
            style="width: 6%;"
          />
          <figure
            class=""
            id="chart_us_and_territories"
          >
            <h4>
              United States & Territories
            </h4>
            <div
              class="data bar-chart"
            >
              <div
                class="bin"
                data-share="1.7140418671913893"
              >
                <div
                  class="label"
                >
                  United States
                </div>
                <div
                  class="value"
                >
                  1.7%
                </div>
                <div
                  class="bar"
                  style="width: 2%;"
                />
              </div>
              <div
                class="bin"
                data-share="4.750954221094806"
              >
                <div
                  class="label"
                >
                  American Samoa
                </div>
                <div
                  class="value"
                >
                  4.8%
                </div>
                <div
                  class="bar"
                  style="width: 5%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div>
    <figure
      id="chart_us"
    >
      <div
        class="data bar-chart"
      />
    </figure>
    <figure
      class="hide"
      id="chart_us_and_territories"
    >
      <h4>
        United States & Territories
      </h4>
      <div
        class="data bar-chart"
      />
    </figure>
    <figure
      class="hide"
      id="chart_countries"
    >
      <h4>
        International
      </h4>
      <div
        class="data bar-chart"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div>
    <figure
      id="chart_us"
    >
      <div
        class="data bar-chart"
      />
    </figure>
    <figure
      class="hide"
      id="chart_us_and_territories"
    >
      <h4>
        United States & Territories
      </h4>
      <div
        class="data bar-chart"
      />
    </figure>
    <figure
      class="hide"
      id="chart_countries"
    >
      <h4>
        International
      </h4>
      <div
        class="data bar-chart"
      />
    </figure>
  </div>
</DocumentFragment>
`;
